--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🏠 Lane Residence</h1>
+        <h1>🏠 Lancaster Farm</h1>
         <p class="description">
             Explore a 1960s-1970s farmhouse with authentic period details and atmospheric descriptions. 
             Navigate through various rooms including the entry hall, living room, kitchen, basement, 
